# static-alloc

./: .gitignore  CMakeLists.txt  README.md  main.c  main.h
docs/: memory-layout.drawio
static-alloc/: CMakeLists.txt  static_alloc.c  static_alloc.h
